# RAG_webui

./: .env.example  .gitignore  README.md  mcp.json  pyproject.toml  requirements.txt  setting.json.example
app/: __init__.py  chunker.py  config.py  database.py  llm.py  main.py  mcp_service.py  models.py  parser.py  retriever.py  settings.py
static/: app.js  styles.css
templates/: index.html
