[project]
name = "rag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "docling>=2.34.0",
    "einops>=0.8.1",
    "eunjeon>=0.4.0",
    "fastapi>=0.115.12",
    "fastembed>=0.7.0",
    "google-generativeai>=0.8.5",
    "kiwipiepy>=0.21.0",
    "konlpy>=0.6.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.21",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.2.0",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-mcp-tools>=0.2.4",
    "langchain-openai>=0.3.21",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.4.8",
    "llama-index>=0.12.40",
    "llama-index-embeddings-huggingface>=0.5.4",
    "llama-index-llms-gemini>=0.5.0",
    "llama-index-retrievers-bm25>=0.5.2",
    "llama-index-vector-stores-qdrant>=0.6.0",
    "mecab-python3>=1.0.10",
    "openai>=1.82.1",
    "pdfplumber>=0.11.6",
    "pip>=25.1.1",
    "postgres-mcp>=0.3.0",
    "pymupdf>=1.26.0",
    "pypdf>=5.6.0",
    "pypdfium2>=4.30.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.12.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.7",
    "stemmer>=0.0.4",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]
